# A2A_google_fork

./: .dockerignore  .gitignore  .tiltignore  CLAUDE.md  README.md  README_TILT.md  Tiltfile.simple  agent_health_check.md  hardcoded_values.md  simpletilt
demo/ui/: README_PERSISTENCE.md  main.py
demo/ui/.a2a_storage/: agents.json  conversations.json  messages_0ca65124-ecdf-47ef-8bb1-4105bb519f07.json  messages_647081b9-0de8-49ec-8598-0a47883886ad.json
demo/ui/components/: agent_list.py  audio_recorder.py  chat_bubble.py  conversation.py  conversation_list.py  event_viewer.py  page_scaffold.py  send_audio_button.py
demo/ui/pages/: agent_list.py  settings.py
demo/ui/service/: types.py
demo/ui/service/client/: client.py
demo/ui/service/server/: adk_host_manager.py  application_manager.py  in_memory_manager.py  persistent_host_manager.py  persistent_storage.py  server.py
demo/ui/state/: host_agent_service.py  state.py
deploy/kubernetes/: README-AUTH.md  README-ONLINE.md  README.md
deploy/kubernetes/docker/agent/: Dockerfile
deploy/kubernetes/docker/ui/: Dockerfile
deploy/kubernetes/scripts/: build.sh  deploy.sh  setup-secret.sh
deploy/local/: .env.template  README.md  docker-compose.yaml  run-local-cluster.sh
one_off_scripts/: git_agent.py
samples/python/: pyproject.toml
samples/python/agents/: README.md
samples/python/agents/repo_cloner/: README.md  __init__.py  __main__.py  agent.py  pyproject.toml  task_manager.py
samples/python/agents/vertex_image_gen/: README.md  __init__.py  __main__.py  agent.py  pyproject.toml  task_manager.py
tilt_modules/dotenv/: Tiltfile
(+41 files in other folders)
