[project]
name = "repo-cloner-agent"
version = "0.1.0"
description = "ADK agent for cloning Git repositories"
requires-python = ">=3.9"
dependencies = [
    "a2a-common-types",
    "starlette",
    "python-dotenv",
    "uvicorn",
    "click",
    "sse-starlette",
    "pydantic>=2.0.0",
    "google-cloud-aiplatform",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
